--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -1,8 +1,4 @@
 
-.contact__content {
-  margin-left: var(--size-5xl);
-}
-
 .contact__hello {
   font-size: var(--size-9xl);
   margin-top: var(--size-5xl);
@@ -58,8 +54,65 @@
   display: none;
 }
 
+/* xss */
+@media (min-width: 345px) {
+  .contact__content {
+    margin-left: var(--size-2xl);
+  }
+  
+  .contact__hello {
+    margin-top: var(--size-6xl);
+    font-size: var(--size-8xl);
+  }
+  
+  .contact_text {
+    max-width: 300px;
+    font-size: var(--size-xl);
+  }
+
+  .email__link {
+    font-size: var(--size-xl);
+  }
+  
+  .content {
+    gap: var(--size-3xl);
+  }
+  
+  .other__link {
+    font-size: 1.2rem;
+    max-width: 600px;
+  }
+  
+  .platforms__link {
+    margin-bottom: var(--size-6xl);
+  }
+
+  .links {
+    font-size: var(--size-xl);
+  }
+}
+
+
 /* xs */
-/* @media (min-width: 475px) {} */
+@media (min-width: 475px) {
+  .contact__hello {
+    font-size: var(--size-9xl);
+    margin-top: var(--size-5xl);
+  }
+  
+  .contact_text {
+    max-width: 400px;
+    font-size: var(--size-xl);
+  }
+
+  .contact__content {
+    margin-left: var(--size-5xl);
+  }  
+
+  .home__links {
+    margin-left: var(--size-5xl);
+  }
+}
 
 /* sm */
 @media (min-width: 640px) {
@@ -71,7 +124,7 @@
     margin-top: var(--size-6xl);
   }
 
-  .home__link {
+  .home__links {
     margin-left: var(--size-6xl);
   }
   
